--- a/demos/equirect/index.html
+++ b/demos/equirect/index.html
@@ -3,7 +3,7 @@
 <head>
 <title>Equirectangular | Marzipano</title>
 <meta name="description" content="Display an equirectangular image." />
-<meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui" />
+<meta name="viewport" content="target-densitydpi=device-dpi, width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes, minimal-ui" />
 <style>@-ms-viewport { width: device-width; }</style>
 <link rel="stylesheet" href="//www.marzipano.net/demos/common/reset.css">
 <link rel="stylesheet" href="style.css">
